<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group1">

        <item android:id="@+id/user_home"
            android:icon="@drawable/home"
            android:title="@string/user_home"/>


        <item android:id="@+id/user_status_of_request"
            android:icon="@drawable/status_of_request"
            android:title="@string/user_status_of_request"/>

        <item android:id="@+id/user_request_for_sample_collect"
            android:icon="@drawable/request_delivery_boy"
            android:title="@string/user_request_for_sample_collect"/>

    </group>

    <group android:checkableBehavior="single" android:id="@+id/group2">

        <item android:id="@+id/user_password_change"
            android:icon="@drawable/password_change"
            android:title="@string/user_password_change"/>

        <item android:id="@+id/user_address_change"
            android:icon="@drawable/address_change"
            android:title="@string/user_address_change"/>

        <item android:id="@+id/user_test_history"
            android:icon="@drawable/history"
            android:title="@string/user_test_history"/>

    </group>

    <group android:checkableBehavior="single" android:id="@+id/group3">

        <item android:id="@+id/user_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/user_about_us"/>

        <item android:id="@+id/user_contact_us"
            android:icon="@drawable/contact_us"
            android:title="@string/user_contact_us"/>

        <item android:id="@+id/user_logout"
            android:icon="@drawable/logout"
            android:title="@string/user_logout"/>

    </group>

</menu>