<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group1">

        <item android:id="@+id/delivery_home"
            android:icon="@drawable/home"
            android:title="@string/delivery_home"/>

    </group>

    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item android:id="@+id/delivery_password_change"
            android:icon="@drawable/password_change"
            android:title="@string/delivery_password_change"/>

        <item android:id="@+id/delivery_address_change"
            android:icon="@drawable/address_change"
            android:title="@string/delivery_address_change"/>

    </group>

    <group android:checkableBehavior="single" android:id="@+id/group3">

        <item android:id="@+id/delivery_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/delivery_about_us"/>

        <item android:id="@+id/delivery_contact_us"
            android:icon="@drawable/contact_us"
            android:title="@string/delivery_contact_us"/>

        <item android:id="@+id/delivery_logout"
            android:icon="@drawable/logout"
            android:title="@string/delivery_logout"/>

    </group>

</menu>